# ltsm

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  Makefile  Makefile.am  README.md  configure.ac  identmap.conf.example  lhsmtool_tsm.conf.example  ltsmc.conf.example  ltsmfsd.conf.example  ltsmfsq.conf.example  sanity.sh  sanity0.sh  sanity1.sh
.github/workflows/: linux.yml
config/: lhsmtool_tsm.cfg
debian/: changelog  control  copyright  docs  fsq.fsqd.service  fsqd.default  fsqd.postinst  fsqd.postrm  fsqd.prerm  lhsmtool_tsm.default  ltsm.lhsmtool_tsm.service  ltsm.ltsmfsd.service  ltsm.ltsmfsq.service  ltsm.postinst  ltsm.postrm  ltsm.prerm  ltsmfsd.default  ltsmfsq.default  rules
doc/: lhsmtool_tsm.1  ltsmc.1
docs/: lhsmtool_tsm.1  ltsmc.1  test_tsmapi.1
dsmopt/: dsm.opt  dsm.sys
man/: Makefile.am  fsqd.1  lhsmtool_tsm.1  ltsmc.1  ltsmfsd.1
rpm/: ltsm.spec
script/: Makefile.am  include.sh  lhsmtool_tsm.service  ltsm.sh  ltsmsync.sh  maxnummp.sh  sanity.0.sh  sanity.1.sh  sanity.2.sh  sanity.lhsmtool_tsm.0.sh  sanity.ltsmc.0.sh  sanity.ltsmc.1.sh  sanity.ltsmfsd.sh  sanity.ltsmfsq.sh  sanity0.sh  sanity1.sh
script/init.setup.tsmserver/: 0.dsmserv.setup.sh  1.dsmserv.init.sh  1.dsmserv.lic.mac  2.1.libr.path.drive.mac  2.devc.mac  3.stg.mac  4.domain.mac  5.policyset.mac  6.mgmtclass.mac  7.copygroup.mac  8.assign.mac  9.activate.mac
src/: Makefile.am  fsqc.c  fsqd.c  lhsmtool_tsm.c  log.c  log.h  ltsmc.c  ltsmfsd.c  ltsmfsq.c  ltsmpipe.c  qarray.c  qarray.h  tsmapi.c  tsmapi.h
src/lib/: Makefile.am  chashtable.c  chashtable.h  common.c  common.h  fsdapi.c  fsdapi.h  fsqapi.c  fsqapi.h  list.c  list.h  log.c  log.h  ltsmapi.c  ltsmapi.h  measurement.h  qarray.c  qarray.h  qtable.c  qtable.h  queue.c  queue.h  timing.c  timing.h  tsmapi.c  tsmapi.h  tsmapi_impl.h  tsmfileapi.c  tsmfileapi.h  xattr.c  xattr.h
src/test/: Makefile.am  fsdbench.c  fsqbench.c  ltsmbench.c  ltsmc_testsuite.c  setup_env.c  setup_env.h  test_cds.c  test_chashtable.c  test_dsstruct64_off64_t.c  test_dsstruct64_off_t.c  test_fcalls.c  test_fsdapi.c  test_fsqapi.c  test_list.c  test_ltsmapi.c  test_qarray.c  test_qtable.c  test_tsm.c  test_tsmapi.c  test_utils.c  test_utils.h
