ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src

# Files to be deleted by 'make maintainer-clean'
MAINTAINERCLEANFILES  = aclocal.m4
MAINTAINERCLEANFILES += aminclude.am
MAINTAINERCLEANFILES += autom4te.cache/*
MAINTAINERCLEANFILES += $(AUX_DIST)
MAINTAINERCLEANFILES += config.log
MAINTAINERCLEANFILES += config.status
MAINTAINERCLEANFILES += config.sub
MAINTAINERCLEANFILES += config.guess
MAINTAINERCLEANFILES += config.h.in
MAINTAINERCLEANFILES += configure
MAINTAINERCLEANFILES += compile
MAINTAINERCLEANFILES += depcomp
MAINTAINERCLEANFILES += install-sh
MAINTAINERCLEANFILES += missing
MAINTAINERCLEANFILES += ltmain.sh
MAINTAINERCLEANFILES += Makefile.in
MAINTAINERCLEANFILES += src/Makefile.in
MAINTAINERCLEANFILES += src/lib/Makefile.in
MAINTAINERCLEANFILES += src/test/Makefile.in
MAINTAINERCLEANFILES += m4/libtool.m4
MAINTAINERCLEANFILES += m4/ltoptions.m4
MAINTAINERCLEANFILES += m4/ltsugar.m4
MAINTAINERCLEANFILES += m4/ltversion.m4
MAINTAINERCLEANFILES += m4/lt~obsolete.m4
MAINTAINERCLEANFILES += GPATH
MAINTAINERCLEANFILES += GRTAGS
MAINTAINERCLEANFILES += GSYMS
MAINTAINERCLEANFILES += GTAGS
